kustomize/deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        counter: "12"
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
          - containerPort: 443
          volumeMounts:
            - name: shared
              mountPath: /usr/share/nginx/html/
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
            - name: nginx-key
              mountPath: /etc/nginx/nginx.key
              subPath: nginx.key
              readOnly: true
            - name: nginx-crt
              mountPath: /etc/nginx/nginx.crt
              subPath: nginx.crt
              readOnly: true
      volumes:
        - name: shared
          emptyDir: {}
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
              - key: nginx.conf
                path: nginx.conf
        - name: nginx-key
          configMap:
            name: nginx-key
            items:
              - key: nginx.key
                path: nginx.key
        - name: nginx-crt
          configMap:
            name: nginx-crt
            items:
              - key: nginx.crt
                path: nginx.crt
