kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
  - hosts:
    - e25905be-fd85-4059-b948-8258536c8b5f.k8s.civo.com
    secretName: civo-ingress-tls
  rules:
    - host: e25905be-fd85-4059-b948-8258536c8b5f.k8s.civo.com
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 8080
        path: /nginx
        pathType: Prefix
